[package]
name = "ww"
description = "A Doppler-like secret manager built on ScyllaDB, with a background daemon and a CLI for injecting environment variables into processes."
authors = ["アクゼスティア <akzestia@gmail.com>"]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "config", "cryptography"]
keywords = ["scylla", "secrets", "env", "cli", "daemon"]
repository = "https://github.com/Akzestia/cql-lsp"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
dirs = "6.0.0"
scylla = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
